fix: maven-compiler-plugin fork+mémoire (fix this.hashes is null)